--- a/social/templates/social/index.html
+++ b/social/templates/social/index.html
@@ -85,6 +85,10 @@
 		<a href="/65/1"><button class="button m-2 p-4 is-size-5 is-info is-light">Jude</button></a>
 		<a href="/66/1"><button class="button m-2 p-4 is-size-5 is-info is-light">Revelation</button></a>
 	</section>
+	<br>
+	<p class="is-size-5">Bible from <a href="https://github.com/bontibon/kjv">bontibon/kjv</a> including Apocrypha</p>
+	<br>
+	<a class="is-size-4 is-link" href="https://github.com/lf32/shalom">lf32/shalom</a>
 	</center>
-     </body>
+  </body>
 </html>
